src/components/canasta/canasta.sass
.canasta
  @apply bg-blue-100 h-full overflow-auto

  .row
    @apply w-full mb-2 flex

    &.header
      @apply justify-center border-b-2

    .spacer
      @apply flex-grow

      &.mid
        @apply flex-grow-0 mx-4

  .title
    @apply text-2xl font-bold py-2

  .team-name
    @apply text-xl

    &:first-child
      @apply ml-2

    &:last-child
      @apply mr-2

  .total-score
    @apply text-xl font-bold

  .vs-sign
    @apply text-center text-xl mx-2

  .button
    @apply text-white bg-blue-500 py-2 px-4 border border-blue-500

    &:hover
      @apply bg-blue-100 text-blue-500

    &.left
      @apply rounded-r

    &.right
      @apply rounded-l

    &.middle
      @apply rounded

